--- a/fd_printf/Makefile
+++ b/fd_printf/Makefile
@@ -6,12 +6,12 @@
 #    By: jcesar-s <jcesar-s@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/24 15:40:37 by jcesar-s          #+#    #+#              #
-#    Updated: 2025/09/08 18:35:12 by jcesar-s         ###   ########.fr        #
+#    Updated: 2025/09/08 18:59:41 by jcesar-s         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=libftprintf_fd.a
-SRC=ft_printf_fd.c ft_putchar.c ft_putstr.c ft_putnbr.c ft_putnbr_hex.c ft_putnbr_u.c ft_putptr.c
+NAME=libfdprintf.a
+SRC=fd_printf.c fd_putchar.c fd_putstr.c fd_putnbr.c fd_putnbr_hex.c fd_putnbr_u.c fd_putptr.c
 OBJS=$(SRC:.c=.o)
 CC=cc
 CFLAGS=-Wall -Wextra -Werror
